# coral

./: .gdb_history  .gitignore  Cargo.toml  justfile  readme.md
crates/bindgen/: Cargo.toml
crates/bindgen/src/: lib.rs  main.rs
crates/collections/: Cargo.toml
crates/collections/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  env.rs  lib.rs  tests.rs  userspace_alloc.rs
crates/linker/: Cargo.toml
crates/linker/src/: instr.rs  lib.rs  main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: abi.rs  funcs.rs  instances.rs  lib.rs  modules.rs  traits.rs  types.rs  vmctx.rs
kernel/: Cargo.toml  x86_64-unknown-ocean.json
kernel/.cargo/: config.toml
kernel/src/: events.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  scheduler.rs  serial.rs  syscalls.rs  vga.rs  wasm.rs
kernel/src/allocator/: fallback.rs  global.rs  mod.rs  utils.rs  wasm.rs
kernel/src/runtime/: kernel_objects.rs  mod.rs  runtime.rs
kernel/src/syscalls/: kernel_objects.rs  mod.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
kernel/wasm/: init.wasm  init.wat  userboot.wasm  userboot.wat
src/: alloc.rs  collections.rs  compiler.rs  env.rs  instances.rs  main.rs  modules.rs  tests.rs  traits.rs  vmctx.rs
tools/: .gitignore  readme.md  rustc-coral.config.toml  rustc-coral.patch
userland/userboot/: Cargo.toml  bindgen.toml
userland/userboot/.cargo/: config.toml
userland/userboot/src/: keyboard.rs  lib.rs  shell.rs  syscalls.rs  vga.rs
userland/userboot/wasm/: syscalls.wasm  syscalls.wat
wasm/: call.wasm  call.wat  full.wasm  full.wat  mem.wasm  mem.wat  mem_simple.wasm  mem_simple.wat  no_add.wat
