[workspace]
resolver = '2'
members = [
    # The kernel itself
    "kernel",

    # Userspace programs
    "userland/userboot",

    # Dependencies
    "crates/collections",
    "crates/compiler",
    "crates/linker",
    "crates/wasm",
]

[profile.kernel]
# Without some basic optimizations the kernel might be too slow
inherits = "dev"
opt-level = 1

[profile.userland]
# Optimize size for userland programs
inherits = "release"
opt-level = "z"
lto = true
