[package]
name = "kernel"
version = "0.1.0"
authors = ["CharlyCst <castes.ch@gmail.com>"]
edition = "2021"

[dependencies]
# Internal Dependencies
wasm = { package = "coral-wasm", path = "../crates/wasm" }
compiler = { package = "coral-compiler", path = "../crates/compiler" }

# External Dependencies
bootloader = { version = "0.9.21", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.8"
uart_16550 = { version = "=0.2.16" }
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 20 # in seconds

[[test]]
name = "stack_overflow"
harness = false
