[package]
name = "ocean-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oceanc"
path = "src/bin/oceanc.rs"
required-features = ["oceanc"]

[features]
oceanc = ["libc"]

[dependencies]
ocean-collections = { path = "../collections" }
ocean-wasm = { path = "../wasm" }

cranelift-wasm = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "ade04c92c2dca6d8f8609125bf3e80fa8345dab2" }
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "ade04c92c2dca6d8f8609125bf3e80fa8345dab2" }

# Used by userspace alloc, needed for userspace execution by oceanc
libc = { version = "0.2.117", optional = true }

[dev-dependencies]
# Used for testing
wat = "1.0"
libc = "0.2.117"

