[package]
name = "coral-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coralc"
path = "src/bin/coralc.rs"
required-features = ["coralc"]

[features]
coralc = ["libc"]

[dependencies]
collections = { package = "coral-collections", path = "../collections" }
wasm = { package = "coral-wasm", path = "../wasm" }

# Used by userspace alloc, needed for userspace execution by coralc
libc = { version = "0.2.117", optional = true }

[dependencies.cranelift-wasm]
git = "https://github.com/CharlyCst/wasmtime.git"
branch = "restricted-std"
default-features = false
features = ["restricted-std"] 

[dependencies.cranelift-codegen]
git = "https://github.com/CharlyCst/wasmtime.git"
branch = "restricted-std"
default-features = false
features = ["restricted-std"]

[dev-dependencies]
# Used for testing
wat = "1.0"
libc = "0.2.117"

